<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.centraldocs.centraldocs.fragments.ContributeFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_language"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="140dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_topic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="210dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_experience_string" />
    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>